k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rust
---
---
---
---
apiVersion: v1
kind: Namespace
metadata:
  name: rust
---
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-web
  namespace: rust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: rust-web
    spec:
      containers:
      - name: hello-app
        image: docker.io/giuliohome/rust-playground-kaniko:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
          limits:
            cpu: 50m
---
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: rust
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8080
  selector:
    app: rust-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myweb
  namespace: rust
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - myweb.giuliohome.org
      secretName: letsencrypt-nginx-myweb
  rules:
    - host: myweb.giuliohome.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 443
  ingressClassName: nginx
